2007-04-27  Wolfgang Sourdeau  <wsourdeau@inverse.ca>

	* SoObjects/SOGo/SOGoObject.m ([SOGoObject -init]): do not invoke
	initWithName:inContainer:. Instead, directly initialize the ivars
	as it is supposed to be to avoid an infinite loop whenever one of
	those two methods are overriden.

	* SoObjects/SOGo/SOGoContentObject.m ([-rolesOfUser:login]):
	removed method.

	* SoObjects/Contacts/SOGoContactLDAPEntry.m ([SOGoContactLDAPEntry
	-aclsForUser:uid]): override method so that SOGo won't crash when
	loading the contact card.

2007-04-26  Wolfgang Sourdeau  <wsourdeau@inverse.ca>

	* SoObjects/Appointments/SOGoAppointmentFolder.m
	([SOGoAppointmentFolder -_privacySqlString]): the string for the
	"freebusy" special user should only require opaque elements.

2007-04-25  Wolfgang Sourdeau  <wsourdeau@inverse.ca>

	* SoObjects/Appointments/SOGoAppointmentFolder.m
	([SOGoAppointmentFolder -davResourceType]): fixed a problem with
	our double declaration where the resulting XML would be screwed.
	There is only one collection per namespace.

	* SoObjects/SOGo/NSCalendarDate+SOGo.m ([NSCalendarDate
	rfc822DateString]): new method that returns a string conform to
	rfc 822 and suitable for email headers.

	* SoObjects/Mailer/SOGoDraftObject.m: invoke the new
	"rfc822DateString" category method on the date we put in the
	header.

2007-04-24  Wolfgang Sourdeau  <wsourdeau@inverse.ca>

	* UI/Common/UIxUserRightsEditor.m ([UIxUserRightsEditor -defaultAction]) 
	([UIxUserRightsEditor -saveUserRightsAction]): new action methods
	which should never be overriden.
	([UIxUserRightsEditor -appendRight:newRight]) 
	([UIxUserRightsEditor -removeRight:right]) 
	([UIxUserRightsEditor -appendExclusiveRight:newRightfromList:list]) 
	([UIxUserRightsEditor -removeAllRightsFromList:list]): new utility
	methods that can be used by the subclasses.
	([UIxUserRightsEditor -prepareRightsForm]): new method that should
	mandatorily be overriden to prepare the elements of the subclassed
	form.