@@ -1,5 +1,14 @@
 2007-04-27  Wolfgang Sourdeau  <wsourdeau@inverse.ca>
 
+	* SoObjects/SOGo/SOGoFolder.m ([SOGoFolder
+	-setRoles:rolesforUser:uidforObjectAtPath:objectPathArray]): cache
+	newly set roles.
+	([SOGoFolder
+	-removeAclsForUsers:usersforObjectAtPath:objectPathArray]): remove
+	specified roles from cache.
+	([SOGoFolder -aclsForUser:uidforObjectAtPath:objectPathArray]):
+	put resulting roles in cache.
+
 	* SoObjects/SOGo/SOGoObject.m ([SOGoObject -init]): do not invoke
 	initWithName:inContainer:. Instead, directly initialize the ivars
 	as it is supposed to be to avoid an infinite loop whenever one of
